Linx: removed unnecessary vis exon class